re-estabish dynamic object properties after unparenting doesn't work #19377

Closed
opened 2009-09-17 15:39:04 +02:00 by bert baum · 7 comments

Category: Physics

%%%Hi,

The example file shows 2 spheres and a cube: both spheres are set to dynamic but the right one is parented to the cube.

In GE, the left one falls down, the right one stays in place. That's ok.

Now if you unparent the right sphere in GE with space-key the spheres dynamic characteristic isn't re-established. That's the bug ;)

..I think these parent+dynamics problems are rather old and were solved once. So how come the bug came up again?

Specs:
Blender 2.49b
WinXP SP3
Nvidia Gforce 6600
Python 2.6.2%%%

**Category**: Physics %%%Hi, The example file shows 2 spheres and a cube: both spheres are set to dynamic but the right one is parented to the cube. In GE, the left one falls down, the right one stays in place. That's ok. Now if you unparent the right sphere in GE with space-key the spheres dynamic characteristic isn't re-established. That's the bug ;) ..I think these parent+dynamics problems are rather old and were solved once. So how come the bug came up again? Specs: Blender 2.49b WinXP SP3 Nvidia Gforce 6600 Python 2.6.2%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Some notes:

  • same behavior with parented rigid bodies
  • same in Blender 2.61.0 r42615

IMPORTANT:
removeParent() works with parent relationships created at runtime, either using setParent() or the Parent Actuator.%%%

%%%Some notes: - same behavior with parented rigid bodies - same in Blender 2.61.0 r42615 IMPORTANT: removeParent() works with parent relationships created at runtime, either using setParent() or the Parent Actuator.%%%

Added subscriber: @raco

Added subscriber: @raco

Not really a duplicate of #35917 but this fix should also solve the issue with restoreDynamics().

Not really a duplicate of #35917 but this fix should also solve the issue with restoreDynamics().

Added subscriber: @mobious

Added subscriber: @mobious

This issue was referenced by 3c77822f96

This issue was referenced by 3c77822f96e6ef6972c3a87467a4941d7a114744

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#19377
No description provided.