BGE: Fix T19377 restore dynamics after unparenting object.

Reviewers: scorpion81